--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -17,7 +17,7 @@ Yogis and buddhists found that consciousness is not a continuum, but constitutes
 
     However, in many commentaries except for that by Vyasa, the discrimination is explained as that discriminating Atman from non-Atman, or Self from non-Self. In fact, in the following stanza (3.53), Patanjali explained that, based on this discrimination, things can be distinguished even though they share the same characters and position. As Heraclitus claimed, one could never step into the same river twice. And in the next stanza (3.55), Patanjali claimed that this ability will lead to the separation of Self and non-Self. So, it is confirmed that it is discriminating moments that is what Patanjali referred to, and that it is the result of this discrimination, instead of the discrimination itself, Self and non-Self are separated.
 
-    There are also interesting researches of neural science on this topic. For example, _Is Perception Discrete or Continuous?_ by Rufin VanRullen and Christof Koch, chapter 15 of _The Quest for Consciousness_ by Christof Koch, and chapter "Speed" and "The River of Consciousness" of _The River of Consciousness_ by Oliver Sacks.
+    There are also interesting researches of neural science on this topic. For example, section 15.5 of _The Quest for Consciousness_ by Christof Koch, and chapter "Speed" and "The River of Consciousness" of _The River of Consciousness_ by Oliver Sacks. These researches find that the typical value of how many objects the mind perceives per second is about 10. But, this value varies greatly in different states of mind; it characterizes our sense of time. In some critical situation, so many objects can be perceived in a second that we feel the real time is dramatically slowed down.
 
 ## Viveka Leads to Superlative Ability of Monitoring Mind
 
@@ -52,8 +52,7 @@ In the beginning, only coarse objects can be noted. But gradually, noting will b
 1. _The Yoga Sutras of Patanjali_ by Christopher Chapple, Yogi Ananda Viraj. ISBN: 8170302447.
 2. _A Comprehensive Manual of Abhidhamma_ by Bhikkhu Bodhi. ISBN: 1928706029.
 3. _Manual of Insight_ by Mahasi Sayadaw. ISBN: 9781614292777.
-4. _Is Perception Discrete or Continuous?_ by Rufin VanRullen and Christof Koch, DOI: 10.1016/S1364-6613(03)00095-0.
-5. _The Quest for Consciousness_ by Christof Koch. ISBN: 9780974707709.
-6. _The River of Consciousness_ by Oliver Sacks. ISBN: 9780385352567.
+4. _The Quest for Consciousness_ by Christof Koch. ISBN: 1936221047.
+5. _The River of Consciousness_ by Oliver Sacks. ISBN: 0804171009.
 
 ---
