--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -5,7 +5,7 @@ title: Viveka
 
 ## Viveka Is the Insight Knowledge of Discriminating Moments
 
-Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. Viveka is the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise. [^viveka]
+Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. Viveka is the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only when the preceding has passed away will a moment arise. [^viveka]
 
   [^moments]: For details, see the stanzas from 3.52 to 3.54 of _The Yoga Sutras of Patanjali_, chapter 4 of _A Comprehensive Manual of Abhidhamma_, and section "Insight Knowledge of Arising and Passing Away" of _Manual of Insight_.
 
@@ -39,11 +39,11 @@ So, the practice of viveka is gradually fulfilling the temporal series of object
 
       ⋯ → object A → note object A → object B → note object B → ⋯.
 
-    Because of the noting, you will perceive a gap between the successive objects. You will find that an object arises and passes away in a sudden, then after a tiny gap (the noting), another object arises and passes away, also in a sudden. This is a natural implication of viveka: noting will occupy a moment; and this moment cannot be shared with any other object.
+    Because of the noting, you will perceive a gap between the successive objects. You will find that an object arises and passes away in a sudden, then after a tiny gap (the noting), will another object arise. This is a natural implication of viveka: noting will occupy a moment; and this moment cannot be shared with any other object.
 
 When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Distinct objects come from the eyes, ears, bodily sensations, and thoughts. A beginner shall limit his vision or even close his eyes. A quiet environment is preferred to start his practice. Unnecessary bodily movement shall be limited; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. In the end, distracting thoughts will naturally lose its power when noting is consistent. Even though limited, the objects to be noted can still be many, so that you may feel multiple objects appear simultaneously. In this case, labeling any of them is valid; the point is being aware of them when they appear. In addition, some objects are so rapid in speed or weak in strength that it is hard to draw attention to them so as to note them precisely. Beginner shall simply omit them, diligently noting what is conspicuous for him.
 
-In the beginning, only coarse objects can be noted. But gradually, noting will become finer and finer; more subtle objects and their indistinguishable order in the temporal series can be realized on their own. When noting becomes fast and swift, more and more objects can be aware of; labeling all of them can be exhausted. In this situation, it is better to drop labels, but simply being aware of what is currently in the mind. [^Mahasi-method]
+In the beginning, only coarse objects can be noted. But gradually, noting will become finer and finer; more subtle objects and their subtle order in the temporal series can be realized on their own. When noting becomes fast and swift, more and more objects can be aware of; labeling all of them can be exhausted. In this situation, it is better to drop labels, but simply being aware of what is currently in the mind. [^Mahasi-method]
 
   [^Mahasi-method]: The method of practice analyzed in this section is consistent with the Mahasi method, which is described in his _Manual of Insight_, especially in its chapter 5. This should not be a surprise, but a confirmation of validity and rationality of the analysis here.
 
