--- a/_posts/2024-03-04-fractal.md
+++ b/_posts/2024-03-04-fractal.md
@@ -39,7 +39,7 @@ $$ R \approx \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \left( \prod_{i=0}^{C-1} n_i^{-1
 
 当然，在 $R$ 的近似表达式中，并不只有 $k=C$ 这一项起作用。求和中的 $k=C-1, C-2$ 这些项起到修正的作用。一方面它们对 $R$ 的影响更小。另一方面，在这些项里，大部分的 $n_k$ 也是同等地位的。所以，这些修正只会轻微地改变分形解。这意味着，真正使阻尼 $R$ 最小化的分支结构，是**近似**分形的。
 
-从这个例子中，我们看出，分形的出现需要以下条件。
+从这个例子中，我们看出，分形的出现需要以下条件：
 
 1. 细胞的数量要大，使得 $n_k \gg 1$。
 2. 这时，在能耗的表达式中只有一项占主导，它对变量 $(n_0, \ldots, n_{C-1})$ 满足重排对称性。
