--- a/_posts/2024-03-04-fractal.md
+++ b/_posts/2024-03-04-fractal.md
@@ -31,9 +31,9 @@ $$ R = \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \sum_{k=0}^{C} \left( \prod_{i=k}^{C-1
 
 当生物体变得很大，包含有很多的细胞时，就需要更多的分支，以使末端的毛细血管更够覆盖所有的细胞。所以，随着细胞数量的增多，每一个 $n_k$ 都相应地变大。当所有 $n_k \gg 1$ 时，求和中的 $k=C$ 这一项就会占主导，即：
 
-$$ R \approx \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \left( \prod_{i=0}^{C-1} n_i^{-1} \right). $$
+$$ R \approx \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \frac{1}{n_0} \cdots \frac{1}{n_{C-1}} \right). $$
 
-也就是说，毛细血管贡献了大部分的阻尼。这个表达式作为 $(n_0, \ldots, n_{C-1})$ 的函数，具有重排对称性（permutation symmetry）：随便交换两个 $n_k$ 的位置都不会改变表达式，它们地位相同。这意味着当 $R$ 达到极小值时，所有 $n_k$ 都应当相等。因此，所有的 $\rho_k$ 或 $\lambda_k$ 也都应当相等（它们是 $n_k$ 的函数）。这正是前面提到的分形：所有的小钉耙都长得一样，只是尺寸不同。[^constraint]
+也就是说，毛细血管贡献了大部分的阻尼。对于这个表达式，唯一值得注意的地方是，变量 $n_0, \ldots, n_{C-1}$ 具有重排对称性（permutation symmetry）：所有 $n_k$ 都具有相同的地位。这意味着当 $R$ 达到极小值时，所有 $n_k$ 都应当相等。因此，所有的 $\rho_k$ 或 $\lambda_k$ 也都应当相等（它们是 $n_k$ 的函数）。这正是前面提到的分形：所有的小钉耙都长得一样，只是尺寸不同。[^constraint]
 
   [^constraint]: 补充一个技术细节。在最小化过程中，我们还需要加入约束：末端毛细血管的总数 $N_C$ 为常数。因为每根毛细血管负责的细胞数量是固定的，所以生物体的细胞数近似正比于 $N_C$。$N_C = \prod_{k=0}^{C-1} n_k$，这个表达式也具有重排对称性。
 
