--- a/_posts/2024-03-04-fractal.md
+++ b/_posts/2024-03-04-fractal.md
@@ -13,6 +13,8 @@ G. B. West等人在1997年提出，大自然中的分形源自于能量损耗的
 
   [^west]: 参见[West, et al. (1997)](https://www.science.org/doi/10.1126/science.276.5309.122)。理想的分支结构参见文中图1的C和D。然而，对于分形如何从最小能耗中产生，West并未给出推导过程。通过数值计算可以发现，最小能耗并不一定能产生分形，而是在一定条件下，产生近似的分形。
 
+    诚然，West考虑的是一个非常理想的分支结构，一个[球形母牛](https://en.wikipedia.org/wiki/Spherical_cow)。实际的情况是，主动脉上并没有这样一处，所有的分支都从这里产生。同一等级的不同血管，分叉方式可能各不相同。只有通过数值模拟才能做出精准的分析。
+
 血液循环系统的能量损耗来自于血液与血管之间的摩擦。根据[Hagen-Poiseuille方程](https://en.wikipedia.org/wiki/Hagen%E2%80%93Poiseuille_equation#Equation)，在第 $k$ 级血管中，血管两端的压力差为 $\Delta p_k = Q_k R_k$，其中 $Q_k$ 表示血流量，$R_k := (8 \mu l_k)/(\pi r_k^4)$，其中 $\mu$ 为血液的粘滞系数，是一个常数。类比于电路，$\Delta p_k$ 对应于电势差 $\Delta V$，$Q_k$ 则对应于电流 $I$。因此，$R_k$ 可以被视作电阻。在同一个分支等级，血管是“并联”的；在不同等级，血管是“串联”的。因此，总的阻尼可以写成：
 
 $$ R = \sum_{k=0}^{C} \frac{R_k}{N_k} = \frac{8\mu}{\pi} \sum_{k=0}^{C} \frac{l_k}{r_k^4 N_k}, $$
@@ -45,5 +47,7 @@ $$ R \approx \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \left( \frac{1}{n_0} \cdots \fra
 2. 这时，在能耗的表达式中只有一项占主导，它对变量 $(n_0, \ldots, n_{C-1})$ 满足重排对称性。
 
 这意味着，对于小型生物，例如一些小型无脊椎动物，细胞数量很少，不会有分形现象。
+
+有趣的是，自相似结构具有非常小的复杂度。基因不需要编码每一个分支的形状。它只需要编码一个，因为所有分支都是相似的。这就产生了一个有趣的事情：正是因为无处不在的分形，基因能够编码复杂的分支结构。而分形是物理定律的结果。如果物理定律不是现在这样，可能就不会有分形，因此就不会有基因，也不会有生命，更不会有一个人，在这个温暖湿润的夜晚，思考分形的由来。
 
 ---
