--- a/_posts/2024-03-04-fractal.md
+++ b/_posts/2024-03-04-fractal.md
@@ -44,7 +44,7 @@ $$ R \approx \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \left( \frac{1}{n_0} \cdots \fra
 从这个例子中，我们看出，分形的出现需要以下条件：
 
 1. 细胞的数量要大，使得 $n_k \gg 1$。
-2. 这时，在能耗的表达式中只有一项占主导，它对变量 $(n_0, \ldots, n_{C-1})$ 满足重排对称性。
+2. 这时，在能耗的表达式中只有少数项占主导，它们对变量 $(n_0, \ldots, n_{C-1})$ 满足重排对称性。
 
 这意味着，对于小型生物，例如一些小型无脊椎动物，细胞数量很少，不会有分形现象。
 
