--- a/_posts/2024-03-04-fractal.md
+++ b/_posts/2024-03-04-fractal.md
@@ -37,7 +37,7 @@ $$ R \approx \frac{8\mu}{\pi} \frac{l_C}{r_C^4} \left( \frac{1}{n_0} \cdots \fra
 
 也就是说，毛细血管贡献了大部分的阻尼。对于这个表达式，唯一值得注意的地方是，变量 $n_0, \ldots, n_{C-1}$ 具有重排对称性（permutation symmetry）：所有 $n_k$ 都具有相同的地位。这就好比一群人抬一个重物，大家按圆形对称站立，因此每个人出的力也是相同的。这意味着当 $R$ 达到极小值时，所有 $n_k$ 也都相等。因此，所有 $\rho_k$ 或 $\lambda_k$ 也都相等（它们是 $n_k$ 的函数）。这正是前面提到的分形：所有的小钉耙都长得一样，只是尺寸不同。[^constraint]
 
-  [^constraint]: 补充一个技术细节。在最小化过程中，我们还需要加入约束：末端毛细血管的总数 $N_C$ 为常数。因为每根毛细血管负责的细胞数量是固定的，所以生物体的细胞数近似正比于 $N_C$。$N_C = \prod_{k=0}^{C-1} n_k$，这个表达式也具有重排对称性。
+  [^constraint]: 补充一个技术细节。在最小化过程中，我们还需要加入约束：例如，末端毛细血管的总数 $N_C$ 为常数。因为每根毛细血管负责的细胞数量是固定的，所以生物体的细胞数近似正比于 $N_C$。$N_C = \prod_{k=0}^{C-1} n_k$，这个表达式也具有重排对称性。
 
 当然，在 $R$ 的近似表达式中，并不只有 $k=C$ 这一项起作用。求和中的 $k=C-1, C-2$ 这些项起到修正的作用。一方面它们对 $R$ 的影响更小。另一方面，在这些项里，大部分的 $n_k$ 也是同等地位的。所以，这些修正只会轻微地改变分形解。这意味着，真正使阻尼 $R$ 最小化的分支结构，是**近似**分形的。
 
