--- a/_posts/2024-03-08-kmeans.md
+++ b/_posts/2024-03-08-kmeans.md
@@ -1,6 +1,6 @@
 ---
 layout: blog-post
-title: 一个与 k-means 算法有关的故事
+title: K-means 算法与艺造记忆
 ---
 
 最近在准备面试，需要复习之前用过的算法，所以就趁机将一些算法改编成夸张荒诞的小故事，利于记忆。例如，k-means是一个有关城市规划的故事。
