--- a/_posts/2025-01-05-bus-no-20.md
+++ b/_posts/2025-01-05-bus-no-20.md
@@ -5,7 +5,7 @@ title: 20 路公交车
 
 很多年前，我还在上海的时候，每天往返于中山公园的家和南京东路的办公室。有一日发现，停靠在公司楼下的 20 路公交车可以直达家门口。准确地讲，公司楼下的公交站是第一站，家门口是最后一站——这简直就是我的“专车”！于是，在某个清爽的初夏傍晚，夕阳照在静穆的教堂尖顶上，我来到公司楼下等公交。
 
-公交从江西中路缓缓驶来，优雅地绕着教堂拐了个弯，停靠在九江路上。我怀带着对新鲜事物的兴奋感上车了。这种感觉无异于拆快递时的兴奋感，只是我的成本仅两元。因为要做到最后一站，我挑了最后一排的座位，靠窗坐下，事后发现这是个错误决定。
+公交车从江西中路缓缓驶来，优雅地绕着教堂拐了个弯，停靠在九江路上。我怀带着对新鲜事物的兴奋感上车了。这种感觉无异于拆快递时的兴奋感，只是我的成本仅两元。因为要做到最后一站，我挑了最后一排的座位，靠窗坐下，事后发现这是个错误决定。
 
 公交车驶过九江路、南京路，在华山路拐了两个弯。我的兴奋劲随着车窗外逐渐暗淡夕阳一道慢慢消褪了，感到困倦，倚窗小憩。再睁开眼时，发现车上已经挤满了人，空气中弥漫着刺鼻的古龙水味。最后一排座位位置较高，能看到所有人的半个头顶。我发现车里有不少外国人，不愧是大上海！
 
