--- a/_posts/2025-02-04-memories.md
+++ b/_posts/2025-02-04-memories.md
@@ -9,11 +9,11 @@ title: 一些回忆
 
 期末考试之前，我们请学长来指导代数拓扑的习题（很难）。学长说到期末试卷中，肯定会出一道“杜老师定理”的应用，因为之前每年都有。我意识到，每年选修拓扑学的学生，都不曾认真思考过这个定理，而只是背下来应付考试而已。（后来这门课我挂掉了，万幸拓扑学是选修课！）
 
-另有一次，在量子力学课上，老师讲到对易关系（令 $\hbar = 1$）$[\hat{x}, \hat{p}] = i$。我也举了个例子：$\bra{x} [\hat{x}, \hat{p}] \ket{x} = \bra{x} i \ket{x}$，即 $\bra{x} \hat{p} \ket{x} (x - x) = i \delta(0)$。但是左边为零，右边……真叫人头疼。课后请教老师，老爷子讲，应当考虑 $\bra{x} [\hat{x}, \hat{p}] \ket{x'} = \bra{x} i \ket{x'}$，即 $\bra{x} \hat{p} \ket{x'} (x - x') = i \delta(x - x')$。带入算符 $\hat{p} = -i \partial / \partial x$，就得到
+另有一次，在量子力学课上，老师讲到对易关系（令 $\hbar = 1$）$[\hat{x}, \hat{p}] = i$。我也举了个例子：$\langle x | [\hat{x}, \hat{p}] | x \rangle = \langle x | i | x \rangle$，即 $\langle x | \hat{p} | x \rangle (x - x) = i \delta(0)$。但是左边为零，右边……真叫人头疼。课后请教老师，老爷子讲，应当考虑 $\langle x | [\hat{x}, \hat{p}] | x' \rangle = \langle x | i | x' \rangle$，即 $\langle x | \hat{p} | x' \rangle (x - x') = i \delta(x - x')$。带入算符 $\hat{p} = -i \partial / \partial x$，就得到
 
 $$ -\delta^{(1)}(x) x = \delta(x). $$
 
-这个关系是成立的。将其作用在一个 Schwartz 空间中的函数 $f$ 上，积分限皆为 $(-\infty, +\infty)$，左边等于 $-\int dx \delta^{(1)}(x) x f(x)$，其分部积分为 $\int dx \delta(x) (d/dx)[x f(x)] = \int dx \delta(x) f(x) + \int dx \delta(x) x f^{(1)}(x)$。第二项等于零，所以左边等于右边。
+这个关系是成立的。将其作用在一个 Schwartz 空间中的函数 $f$ 上，积分限皆为 $(-\infty, +\infty)$，左边等于 $-\int dx \delta^{(1)}(x) x f(x)$，其分部积分为 $\int dx \delta(x) (d/dx)[x f(x)] = \int dx \delta(x) f(x) + \int dx \delta(x) x f^{(1)}(x)$。第二项等于零，所以左边等于右边。只有当“作用”于某个函数时，这个等式才有意义。
 
 回想至此，不由得好奇这个关系能不能被推广。例如，根据相同的步骤，可以得到 $(-1)^n / n! \delta^{(n)}(x) x^n = \delta(x)$。以及当 $m > n$ 时，$\delta^{(n)}(x) x^m = 0$。但如果尝试 $m < n$，情况就变得比较复杂了，无法得到简洁的关系。这时的做法通常是考虑更强的关系，例如，如果不是作用在 Schwartz 空间，而是直接积分会怎么样，也就是 $\int dx \delta^{(n)}(x) x^m$ 等于什么。根据同样的步骤，可以得到
 
@@ -27,7 +27,7 @@ $$ f(x) = \sum_{n=0}^{+\infty} \frac{(-1)^n}{n!} g_n \delta^{(n)}(x), $$
 
 $$g_n := \int_{-\infty}^{+\infty} dx f(x) x^n.$$
 
-这样，函数 $f$ 就被展开成“分布”的和了。
+这样，函数 $f$ 就被展开成“分布”的和了。同样，只有当“作用”于某个函数时，这个展开式才有意义。
 
 这让我想到连续时马尔可夫过程中的跃迁率（transition rate），即单位时间内跃迁的概率密度。如果把这个展开式应用于跃迁率，即 $r(x, y) = \sum_{n=0}^{+\infty} \frac{(-1)^n}{n!} g_n(y) \delta^{(n)}(x-y)$，那么主方程（master equation）就变为
 
