--- a/_posts/2025-02-28-memory.md
+++ b/_posts/2025-02-28-memory.md
@@ -5,7 +5,7 @@ title: 关于记忆
 
 之前因为眼疾，为避免用眼，不得不在心里做计算、打草稿。久而久之，发现竟可以毫不费力地记住那些复杂的公式。与其说是记住，不如说是“呈现”：当我需要一个公式时，那个公式就像图像一样，清晰地呈现在脑海中，没有一点模糊。而且当我用到一个公式时，不待回忆，它就会即刻呈现出来，就像 J. K. Rowling 笔下的“飞来咒”一样。不仅如此，我还发现，能够呈现在脑海中的公式，通常是最为重要的，处于核心地位的。也就是说，大脑自动识别出什么是重要的，我甚至都没有意识到这一点。这突如其来的新能力让人惊喜，我仿佛变聪明了。
 
-其实不然。最近眼睛康复了许多，不再需要心算了。今天突然发现，呈现出来的图片只有一个大概的轮廓，细节变得模糊了。例如一个系数，我看不清是 $(-i)^n$ 还是 $(-1)^n$。这是怎么回事？
+其实不然。最近眼睛康复了许多，不再需要心算了。今天突然发现，呈现出来的图片只有一个大概的轮廓，细节变得模糊了。例如一个系数，我看不清是 $(-\textrm{i})^n$ 还是 $(-1)^n$。这是怎么回事？
 
 回忆、对比生病和康复期间的经历，我想关键在于两点：主动回想和回想频率。心算迫使我主动回想这些公式，让这些公式在脑海中呈现出来。但在纸上计算，就不需要回想了。此外，因为经常需要回想，频繁地呈现使图像保持清晰度。对于重要的公式，每两天至少回想一次（有时我会一整天不计算，出门散步或听书）。而不怎么用得到的公式，因为回想频率太低而没有被记住，这就是大脑自动识别出重要公式的原因。当不再需要心算之后，重要的公式也鲜少呈现在脑海中，自然就模糊了。
 
