--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -37,7 +37,7 @@ $$ \bar{g}_0(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[
 
 这个结果也与上面的分析自洽。默认模式下充分弥散的相点使分布 $P(\theta)$ 能够覆盖所有其它模式的吸引子。如此一来，使用 $P(\theta)$ 进行采样计算期望值，就能对 $g_i$ 的大小做出合理的估计。反之，如果 $P(\theta)$ 只能覆盖相空间中的一小片区域，且没有覆盖 $g_2$ 的吸引子，那么当系统处于第 $2$ 个模式时，大量的相轨迹离开 $P(\theta)$ 的覆盖区，$\bar{g}_2$ 就不能代表 $g_2$ 的大小了（因为 $\bar{g}_2$ 是在 $P(\theta)$ 上取的期望值）。
 
-需要注意的是，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta|^2)$ 将变得不可忽略。这个分析思路很像图灵研究形态生成的思路，即在某个特殊的值附近做线性展开。不同之处在于，图灵的特殊值是相空间中的（固定点），而这里的特殊值则在参数空间中。
+需要注意的是，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta\|^2)$ 将变得不可忽略。这个分析思路很像图灵研究形态生成的思路，即在某个特殊的值附近做线性展开。不同之处在于，图灵的特殊值是相空间中的（固定点），而这里的特殊值则在参数空间中。
 
 因此，这个构造似乎不适用于人类的大脑。人类大脑具有强大的默认模式，这从我们在公交车上做白日梦，回过神来发现坐过站了就可以看出。在缺少外界刺激的情况下，大脑的默认模式网络被激活，并主导大脑的动力学。这时，我们做起了白日梦，周围的事物隐退不见了。需要非常强的外界刺激（即 $\delta \theta$ 不再是微扰），才能使我们从梦中惊醒。不过，正如[《我们为什么要睡觉？》](https://book.douban.com/subject/35332778/)一书中提到的，做白日梦是人类的天赋。只有能够建造安全居所的动物，不用整日对周遭环境保持警觉，才具有做白日梦的能力（或权利）。而正是由于这个能力，人类得以发明创造新的东西。
 
