--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -17,7 +17,7 @@ $$ \dot{x}(t) = f(x(t), \theta), $$
 
 $$ f(x, \theta + \delta \theta) = g_0(x, \theta) + \sum_{i=1}^m \delta \theta^i g_i(x, \theta) + o(\|\delta \theta\|^2). $$
 
-其中，$g_0(x, \theta) := f(x, \theta)$，$g_i(x, \theta) = (\partial f)(\partial \theta^i)(x, \theta)$。**如果每一个 $g_i$ 都有不同的吸引子（稳定固定点、极限环等等，也包括奇怪吸引子），那么我们就可以将其视作不同的模式。**进一步，如果“默认模式” $g_0$ 可忽略，并且对所有 $i \in \{1, \ldots, m\}$，$g_i$ 的大小都处在同一量级，那么当 $\delta \theta^i$ 大于其它 $\delta \theta$ 的其它分量时，$g_i$ 就主导了整个动力系统，使相轨迹进入该模式的吸引子。这样就实现了模式切换。
+其中，$g_0(x, \theta) := f(x, \theta)$，$g_i(x, \theta) = (\partial f)(\partial \theta^i)(x, \theta)$。**如果对每一个 $g_i$，动力系统 $\dot{x}(t) = g_i(x(t))$ 都具有吸引子（稳定固定点、极限环等等，也包括奇怪吸引子），并且所有 $g_i$ 的吸引子都各不相同，那么我们就可以将其视作不同的模式。**进一步，如果“默认模式” $g_0$ 可忽略，并且对所有 $i \in \{1, \ldots, m\}$，$g_i$ 的大小都处在同一量级，那么当 $\delta \theta^i$ 大于其它 $\delta \theta$ 的其它分量时，$g_i$ 就主导了整个动力系统，使相轨迹进入该模式的吸引子。这样就实现了模式切换。
 
 然而，这些 $g$ 不是数值，而是一些带有自变量 $x$ 的函数，因此不能直接比较。要讨论函数的大小，需要把自变量积掉。在这个过程中，并不是所有的 $x$ 都是平权的。由于模式具有吸引子，从而将相轨迹限定在一个有界区域内，这意味着 $x$ 大概率出现在吸引子所在的 $\mathbb{R}^d$ 的有界子集里。所以我们应当考虑：
 
