--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -17,7 +17,7 @@ $$ \dot{x}(t) = f(x(t), \theta), $$
 
 $$ f(x, \theta + \delta \theta) = g_0(x, \theta) + \sum_{i=1}^m \delta \theta^i g_i(x, \theta) + o(\|\delta \theta\|^2). $$
 
-其中，$g_0(x, \theta) := f(x, \theta)$，$g_i(x, \theta) = (\partial f)(\partial \theta^i)(x, \theta)$。**如果对每一个 $g_i$，动力系统 $\dot{x}(t) = g_i(x(t))$ 都具有吸引子（稳定固定点、极限环等等，也包括奇怪吸引子），并且所有 $g_i$ 的吸引子都各不相同，那么我们就可以将其视作不同的模式。**进一步，如果“默认模式” $g_0$ 可忽略，并且对所有 $i \in \{1, \ldots, m\}$，$g_i$ 的大小都处在同一量级，那么当 $\delta \theta^i$ 大于其它 $\delta \theta$ 的其它分量时，$g_i$ 就主导了整个动力系统，使相轨迹进入该模式的吸引子。这样就实现了模式切换。与其说是模式的切换，毋宁说是模式之间的“竞争”：谁压过了其它项，系统就转变成谁的模式。
+其中，$g_0(x, \theta) := f(x, \theta)$，$g_i(x, \theta) = (\partial f)(\partial \theta^i)(x, \theta)$。**如果对每一个 $g_i$，动力系统 $\dot{x}(t) = g_i(x(t))$ 都具有吸引子（稳定固定点、极限环等等，也包括奇怪吸引子），并且所有 $g_i$ 的吸引子都各不相同，那么我们就可以将其视作不同的模式。**进一步，如果“默认模式” $g_0$ 可忽略，并且对所有 $i \in \{1, \ldots, m\}$，$g_i$ 的大小都处在同一量级，那么当 $\delta \theta^i$ 大于其它 $\delta \theta$ 的其它分量时，$g_i$ 就主导了整个动力系统，使相轨迹进入该模式的吸引子。这样就实现了模式切换。与其说是模式的切换，毋宁说是模式之间的“竞争”：谁压过了其它项，系统就跟从谁的模式。
 
 然而，这些 $g$ 不是数值，而是一些带有自变量 $x$ 的函数，因此不能直接比较。要讨论函数的大小，需要把自变量积掉。在这个过程中，并不是所有的 $x$ 都是平权的。由于模式具有吸引子，从而将相轨迹限定在一个有界区域内，这意味着 $x$ 大概率出现在吸引子所在的 $\mathbb{R}^d$ 的有界子集里。所以我们应当考虑：
 
@@ -31,13 +31,15 @@ $$ \bar{g}_i(\theta) = \lim_{t \to \infty} \frac{1}{t} \mathrm{E}_{x \sim P(\the
 
 $$ \bar{g}_0(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[ \frac{1}{t} \int_0^t \mathrm{d}s \sum_{\alpha=1}^d \left( f^{\alpha}(x(s), \theta) \right)^2 \right]. $$
 
-因此，如果存在满足如下条件的 $\theta$，就可以实现模式切换：对于所有 $i \in \{1, \ldots, m\}$，$\bar{g}_0(\theta) \ll \bar{g}_i(\theta)$ 且 $\bar{g}_i(\theta)$ 都在同一量级。这样我们就构造出了模式切换的动力学。
+因此，要实现模式切换，就需要让 $\bar{g}_0(\theta)$ 充分小。有两种可能：或者 $f(x, \theta)$ 一致地很小，它对应于充分弥散的相点分布（因为 $\dot{x}(t) \approx 0$，所以系统会长时间保持在初始的弥散状态）；或者 $f(x, \theta)$ 存在稳定固定点，并且在该固定点周围很大，这样就使得所有的相轨迹都迅速收敛到 $f(x, \theta) = 0$ 处了。为了分析的自洽性，我们必须采用第一种可能，而舍弃第二种。因为充分弥散的相点使分布 $P(\theta)$ 能够覆盖所有其它模式的吸引子。如此一来，使用 $P(\theta)$ 进行采样计算期望值，就能对 $g_i$ 的大小做出合理的估计。反之，如果 $P(\theta)$ 只能覆盖相空间中很小的一片区域，且没有覆盖到 $g_2$ 的吸引子，那么当系统处于第 $2$ 个模式时，大量的相轨迹离开 $P(\theta)$ 的覆盖区，$\bar{g}_2$ 就不能代表 $g_2$ 的大小了（因为 $\bar{g}_2$ 是在 $P(\theta)$ 上取的期望值）。所以，如果存在 $\theta \in \mathbb{R}^m$ 使得 $f(x, \theta)$ 一致地很小，就能产生模式切换。
 
-这个条件的具体含义是什么？由于 $f(x, \theta)$ 很小，默认模式虽然也具有吸引子，但这个吸引子的“吸引力”必然是很弱的。这使得系统在没有外界刺激（即 $\delta \theta = 0$）时，处在广泛的弥散状态。例如，蚁群的默认模式是四处搜索，看上去像是漫无目的的游走，虽然不会远离蚁穴，并且时不时地折返，但蚁群的弥散范围很大，说明蚁穴的“吸引力”不强。这有助于蚁群快速响应，切换模式。对于羚羊来说，它不能像人类那样做白日梦，否则被狮子吃掉就是迟早的事了。
-
-这个结果也与上面的分析自洽。默认模式下充分弥散的相点使分布 $P(\theta)$ 能够覆盖所有其它模式的吸引子。如此一来，使用 $P(\theta)$ 进行采样计算期望值，就能对 $g_i$ 的大小做出合理的估计。反之，如果 $P(\theta)$ 只能覆盖相空间中的一小片区域，且没有覆盖 $g_2$ 的吸引子，那么当系统处于第 $2$ 个模式时，大量的相轨迹离开 $P(\theta)$ 的覆盖区，$\bar{g}_2$ 就不能代表 $g_2$ 的大小了（因为 $\bar{g}_2$ 是在 $P(\theta)$ 上取的期望值）。
-
-需要注意的是，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta\|^2)$ 将变得不可忽略。这个分析思路很像图灵研究形态生成的思路，即在某个特殊的值附近做线性展开。不同之处在于，图灵的特殊值是相空间中的（固定点），而这里的特殊值则在参数空间中。
+这时，如果没有外界刺激（即 $\delta \theta = 0$），系统将处在广泛的弥散状态。例如，[蚁群的默认模式](2025-07-07.md#1-mathematics-biology-bifurcation)是四处搜索，看上去像是漫无目的的游走，虽然不会远离蚁穴，并且时不时地折返，但蚁群的弥散范围很大，说明蚁穴的“吸引力”不强。这有助于蚁群快速响应，切换模式。对于羚羊来说，它不能像人类那样做白日梦，否则被狮子吃掉就是迟早的事了。
 
 因此，这个构造似乎不适用于人类的大脑。人类大脑具有强大的默认模式，这从我们在公交车上做白日梦，回过神来发现坐过站了就可以看出。在缺少外界刺激的情况下，大脑的默认模式网络被激活，并主导大脑的动力学。这时，我们做起了白日梦，周围的事物隐退不见了。需要非常强的外界刺激（即 $\delta \theta$ 不再是微扰），才能使我们从梦中惊醒。不过，正如[《我们为什么要睡觉？》](https://book.douban.com/subject/35332778/)一书中提到的，做白日梦是人类的天赋。只有能够建造安全居所的动物，不用整日对周遭环境保持警觉，才具有做白日梦的能力（或权利）。而正是由于这个能力，人类得以发明创造新的东西。
+
+最后需要说明的是，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）[^turing]。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta\|^2)$ 将变得不可忽略。尽管如此，对于我们的问题来说，微扰处理就足够了。我们关心的是系统如何具有模式切换的能力，要确认这种能力，只需微小的扰动即可。例如，在桌子上撒一点糖，看蚂蚁是否会集结成队搬运食物。
+
+  [^turing]: 这个分析思路很像图灵研究形态生成的思路，即在某个特殊的值附近做线性展开。图灵的特殊值是相空间中的（固定点），这里的特殊值则在参数空间中。
+
+<font color="red">进一步的问题是，模式之间是否存在协作？亦即当系统同时处于两个或多个模式的时，是否会形成新的模式？</font>
 
