--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -33,7 +33,7 @@ $$ \bar{g}_0(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[
 
 因此，要实现模式切换，就需要让 $\bar{g}_0(\theta)$ 充分小。有两种可能：或者 $f(x, \theta)$ 一致地很小，它对应于充分弥散的相点分布（因为 $\dot{x}(t) \approx 0$，所以系统会长时间保持在初始的弥散状态）；或者 $f(x, \theta)$ 存在稳定固定点，并且在该固定点周围很大，这样就使得所有的相轨迹都迅速收敛到 $f(x, \theta) = 0$ 处了。为了分析的自洽性，我们必须采用第一种可能，而舍弃第二种。因为充分弥散的相点使分布 $P(\theta)$ 能够覆盖所有其它模式的吸引子。如此一来，使用 $P(\theta)$ 进行采样计算期望值，就能对 $g_i$ 的大小做出合理的估计。反之，如果 $P(\theta)$ 只能覆盖相空间中很小的一片区域，且没有覆盖到 $g_2$ 的吸引子，那么当系统处于第 $2$ 个模式时，大量的相轨迹离开 $P(\theta)$ 的覆盖区，$\bar{g}_2$ 就不能代表 $g_2$ 的大小了（因为 $\bar{g}_2$ 是在 $P(\theta)$ 上取的期望值）。所以，如果存在 $\theta \in \mathbb{R}^m$ 使得 $f(x, \theta)$ 一致地很小，就能产生模式切换。
 
-这时，如果没有外界刺激（即 $\delta \theta = 0$），系统将处在广泛的弥散状态。例如，[蚁群的默认模式](2025-07-07.md#1-mathematics-biology-bifurcation)是四处搜索，看上去像是漫无目的的游走，虽然不会远离蚁穴，并且时不时地折返，但蚁群的弥散范围很大，说明蚁穴的“吸引力”不强。这有助于蚁群快速响应，切换模式。对于羚羊来说，它不能像人类那样做白日梦，否则被狮子吃掉就是迟早的事了。
+这时，如果没有外界刺激（即 $\delta \theta = 0$），系统将处在广泛的弥散状态。例如，蚁群的默认模式是四处搜索，看上去像是漫无目的的游走，虽然不会远离蚁穴，并且时不时地折返，但蚁群的弥散范围很大，说明蚁穴的“吸引力”不强。这有助于蚁群快速响应，切换模式。对于羚羊来说，它不能像人类那样做白日梦，否则被狮子吃掉就是迟早的事了。
 
 因此，这个构造似乎不适用于人类的大脑。人类大脑具有强大的默认模式，这从我们在公交车上做白日梦，回过神来发现坐过站了就可以看出。在缺少外界刺激的情况下，大脑的默认模式网络被激活，并主导大脑的动力学。这时，我们做起了白日梦，周围的事物隐退不见了。需要非常强的外界刺激（即 $\delta \theta$ 不再是微扰），才能使我们从梦中惊醒。不过，正如[《我们为什么要睡觉？》](https://book.douban.com/subject/35332778/)一书中提到的，做白日梦是人类的天赋。只有能够建造安全居所的动物，不用整日对周遭环境保持警觉，才具有做白日梦的能力（或权利）。而正是由于这个能力，人类得以发明创造新的东西。
 
