--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -37,6 +37,8 @@ $$ \bar{g}_0(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[
 
 因此，这个构造似乎不适用于人类的大脑。人类大脑具有强大的默认模式，这从我们在公交车上做白日梦，回过神来发现坐过站了就可以看出。在缺少外界刺激的情况下，大脑的默认模式网络被激活，并主导大脑的动力学。这时，我们做起了白日梦，周围的事物隐退不见了。需要非常强的外界刺激（即 $\delta \theta$ 不再是微扰），才能使我们从梦中惊醒。不过，正如[《我们为什么要睡觉？》](https://book.douban.com/subject/35332778/)一书中提到的，做白日梦是人类的天赋。只有能够建造安全居所的动物，不用整日对周遭环境保持警觉，才具有做白日梦的能力（或权利）。而正是由于这个能力，人类得以发明创造新的东西。
 
+再回到铁磁相变的 Ginzburg-Landau 理论。相变是物理学家的用词，数学家则更习惯使用分岔（bifurcation）。一个典型的分岔是 $f(x, \theta) = \theta x - x^3$ 的一维动力系统，分岔（或相变）发生在 $\theta = 0$。分岔的直观图示见[《非线性动力学与混沌》](https://book.douban.com/subject/27049323/)的图 3.4.1。该系统具有势能函数 $x^4/4 - \theta x^2/2$，呈墨西哥帽状（参见同一本书的例题 3.4.2）。分岔发生时 $\theta = 0$，这时势能函数的底部变平，并且在远离原点的地方迅速变得陡峭。远离原点的相轨迹沿着陡峭的势能函数迅速滑向平坦的底部，然后迅速减速，以极其缓慢的速度向原点移动。结果就是，大量的相点分布在平坦的底部，其它地方则几乎没有相点。如此一来，$|f(x, \theta)|$ 在很大的范围内一致地接近于零，从而具有模式切换的能力。而不论 $\theta$ 大于还是小于零，相点都集中在稳定固定点附近，不能满足产生模式切换的条件。所以模式切换的能力确实与相变或分岔有关。
+
 最后需要说明的是，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）[^turing]。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta\|^2)$ 将变得不可忽略。尽管如此，对于我们的问题来说，微扰处理就足够了。我们关心的是系统如何具有模式切换的能力，要确认这种能力，只需微小的扰动即可。例如，在桌子上撒一点糖，看蚂蚁是否会集结成队搬运食物。
 
   [^turing]: 这个分析思路很像图灵研究形态生成的思路，即在某个特殊的值附近做线性展开。图灵的特殊值是相空间中的（固定点），这里的特殊值则在参数空间中。
