--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -17,7 +17,7 @@ $$ \dot{x}(t) = f(x(t), \theta), $$
 
 $$ f(x, \theta + \delta \theta) = g_0(x, \theta) + \sum_{i=1}^m \delta \theta^i g_i(x, \theta) + o(\|\delta \theta\|^2). $$
 
-其中，$g_0(x, \theta) := f(x, \theta)$，$g_i(x, \theta) = (\partial f)(\partial \theta^i)(x, \theta)$。**如果对每一个 $g_i$，动力系统 $\dot{x}(t) = g_i(x(t))$ 都具有吸引子（稳定固定点、极限环等等，也包括奇怪吸引子），并且所有 $g_i$ 的吸引子都各不相同，那么我们就可以将其视作不同的模式。**进一步，如果“默认模式” $g_0$ 可忽略，并且对所有 $i \in \{1, \ldots, m\}$，$g_i$ 的大小都处在同一量级，那么当 $\delta \theta^i$ 大于其它 $\delta \theta$ 的其它分量时，$g_i$ 就主导了整个动力系统，使相轨迹进入该模式的吸引子。这样就实现了模式切换。与其说是模式的切换，毋宁说是模式之间的“竞争”：谁压过了其它项，系统就跟从谁的模式。
+其中，$g_0(x, \theta) := f(x, \theta)$，$g_i(x, \theta) = (\partial f)(\partial \theta^i)(x, \theta)$。**如果对每一个 $g_i$（准确地说，是 $\pm g_i$），动力系统 $\dot{x}(t) = g_i(x(t))$ 都具有吸引子（稳定固定点、极限环等等，也包括奇怪吸引子），并且所有 $g_i$ 的吸引子都各不相同，那么我们就可以将其视作不同的模式。**进一步，如果“默认模式” $g_0$ 可忽略，并且对所有 $i \in \{1, \ldots, m\}$，$g_i$ 的大小都处在同一量级，那么当 $\delta \theta^i$ 大于其它 $\delta \theta$ 的其它分量时，$g_i$ 就主导了整个动力系统，使相轨迹进入该模式的吸引子。这样就实现了模式切换。与其说是模式的切换，毋宁说是模式之间的“竞争”：谁压过了其它项，系统就跟从谁的模式。
 
 然而，这些 $g$ 不是数值，而是一些带有自变量 $x$ 的函数，因此不能直接比较。要讨论函数的大小，需要把自变量积掉。在这个过程中，并不是所有的 $x$ 都是平权的。由于模式具有吸引子，从而将相轨迹限定在一个有界区域内，这意味着 $x$ 大概率出现在吸引子所在的 $\mathbb{R}^d$ 的有界子集里。所以我们应当考虑：
 
@@ -39,11 +39,15 @@ $$ \bar{g}_0(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[
 
 再回到铁磁相变的 Ginzburg-Landau 理论。相变是物理学家的用词，数学家则更习惯使用分岔（bifurcation）。一个典型的分岔是 $f(x, \theta) = \theta x - x^3$ 的一维动力系统，分岔（或相变）发生在 $\theta = 0$。分岔的直观图示见[《非线性动力学与混沌》](https://book.douban.com/subject/27049323/)的图 3.4.1。该系统具有势能函数 $x^4/4 - \theta x^2/2$，呈墨西哥帽状（参见同一本书的例题 3.4.2）。分岔发生时 $\theta = 0$，这时势能函数的底部变平，并且在远离原点的地方迅速变得陡峭。远离原点的相轨迹沿着陡峭的势能函数迅速滑向平坦的底部，然后迅速减速，以极其缓慢的速度向原点移动。结果就是，大量的相点分布在平坦的底部，其它地方则几乎没有相点。如此一来，$|f(x, \theta)|$ 在很大的范围内一致地接近于零，从而具有模式切换的能力。而不论 $\theta$ 大于还是小于零，相点都集中在稳定固定点附近，不能满足产生模式切换的条件。所以模式切换的能力确实与相变或分岔有关。
 
-最后需要说明的是，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）[^turing]。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta\|^2)$ 将变得不可忽略。尽管如此，对于我们的问题来说，微扰处理就足够了。我们关心的是系统如何具有模式切换的能力，要确认这种能力，只需微小的扰动即可。例如，在桌子上撒一点糖，看蚂蚁是否会集结成队搬运食物。
+乍看上去，这个一般性的构造仅适用于 $\delta \theta$ 充分小的情况（微扰）[^turing]。随着 $\delta \theta$（或其中的某些分量）不断增大，残差 $o(\|\delta \theta\|^2)$ 将变得不可忽略。然而，对于我们的问题来说，微扰处理就足够了。我们关心的是系统如何具有模式切换的能力，要确认这种能力，只需微小的扰动即可。例如，只要在桌面撒上一点糖，就能看到蚂蚁集结成队搬运食物。
 
   [^turing]: 这个分析思路很像图灵研究形态生成的思路，即在某个特殊的值附近做线性展开。图灵的特殊值是相空间中的（固定点），这里的特殊值则在参数空间中。
 
-<font color="red">进一步的问题是，模式之间是否存在协作？亦即当系统同时处于两个或多个模式的时，是否会形成新的模式？</font>
+再回到铁磁相变的 Ginzburg-Landau 理论。在这个理论中，势能函数形如
+
+$$ V(x, \theta) = - \frac{1}{2} \theta x^2 + \frac{1}{4} x^4, $$
+
+当 $\theta > 0$ 时呈墨西哥帽状。它的动力学由方程 $\dot{x}(t) = -(\partial V / \partial x)(x(t), \theta) = \theta x(t) - x(t)^3$ 描述。相变发生时 $\theta = 0$，这时势能函数的底部变平，并且在远离原点的地方迅速变得陡峭。远离原点的相轨迹沿着陡峭的势能函数迅速滑向平坦的底部，然后迅速减速，以极其缓慢的速度向原点移动。结果就是，大量的相点分布在平坦的底部，其它地方则几乎没有相点。如此一来，$|f(x, \theta)|$ 在很大的范围内一致地接近于零，从而具有模式切换的能力。而不论 $\theta$ 大于还是小于零，相点都集中在稳定固定点附近，不能满足产生模式切换的条件。所以模式切换的能力确实与相变有关。应用到上面的分析中，我们有 $g_0(x) = -x^3$ 和 $g_1(x) = x$。值得注意的是，$g_1(x)$ 本身只有一个平凡固定点，即 $x = 0$，但当 $\delta \theta > 0$ 时，非平凡的稳定固定点出现在 $x = \pm \sqrt{\delta \theta}$ 处，这是 $g_0$ 和 $g_1$ 连合导致的。这启发我们：<font color="red">模式之间是否存在协作？也就是说，当系统同时处于两个或多个模式（也包括默认模式）时，是否会形成新的模式？</font>正如 $g_0$ 和 $g_1$ 的某种组合产生了新的模式。
 
 ---
 
