--- a/_posts/2025-07-17-modes.md
+++ b/_posts/2025-07-17-modes.md
@@ -21,7 +21,7 @@ $$ f(x, \theta + \delta \theta) = g_0(x, \theta) + \sum_{i=1}^m \delta \theta^i 
 
 然而，这些 $g$ 不是数值，而是一些带有自变量 $x$ 的函数，因此不能直接比较。要讨论函数的大小，需要把自变量积掉。在这个过程中，并不是所有的 $x$ 都是平权的。由于模式具有吸引子，从而将相轨迹限定在一个有界区域内，这意味着 $x$ 大概率出现在吸引子所在的 $\mathbb{R}^d$ 的有界子集里。所以我们应当考虑：
 
-$$ \bar{g}_i(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[ \frac{1}{t} \int_0^t \mathrm{d}s | g_i(x(s), \theta) |^2 \right], $$
+$$ \bar{g}_i(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[ \frac{1}{t} \int_0^t \mathrm{d}s \| g_i(x(s), \theta) \|^2 \right], $$
 
 其中 $P(\theta)$ 为相轨迹 $x(t)$ 的分布，它也依赖于动力系统的参数 $\theta$。这里既需要对相轨道进行平均（相轨道的期望），也需要对一个相轨道上所有相点进行平均（时间的平均）。可以想见，采样的大部分相点都分布在默认模式 $g_0$ 的吸引子上（我们会在后面详论其合理性或自洽性）。代入 $g_i$ 的定义，我们发现 $\bar{g_i}$ 正好就是 Langevin 过程的（时间平均的）Fisher 矩阵的对角元：
 
@@ -45,7 +45,7 @@ $$ \bar{g}_0(\theta) := \lim_{t \to \infty} \mathrm{E}_{x \sim P(\theta)} \left[
 
 $$ V(x, \theta) = - \frac{1}{2} \theta x^2 + \frac{1}{4} x^4, $$
 
-当 $\theta > 0$ 时呈墨西哥帽状。它的动力学由方程 $\dot{x}(t) = -(\partial V / \partial x)(x(t), \theta) = \theta x(t) - x(t)^3$ 描述。相变发生时 $\theta = 0$，这时势能函数的底部变平，并且在远离原点的地方迅速变得陡峭。远离原点的相轨迹沿着陡峭的势能函数迅速滑向平坦的底部，然后迅速减速，以极其缓慢的速度向原点移动。结果就是，大量的相点分布在平坦的底部，其它地方则几乎没有相点。如此一来，$|f(x, \theta)|$ 在很大的范围内一致地接近于零，从而具有模式切换的能力。而不论 $\theta$ 大于还是小于零，相点都集中在稳定固定点附近，不能满足产生模式切换的条件。所以模式切换的能力确实与相变有关。应用到上面的分析中，我们有 $g_0(x) = -x^3$ 和 $g_1(x) = x$。值得注意的是，$g_1(x)$ 本身只有一个平凡固定点，即 $x = 0$，但当 $\delta \theta > 0$ 时，非平凡的稳定固定点出现在 $x = \pm \sqrt{\delta \theta}$ 处，这是 $g_0$ 和 $g_1$ 连合导致的。这启发我们：<font color="red">模式之间是否存在协作？也就是说，当系统同时处于两个或多个模式（也包括默认模式）时，是否会形成新的模式？</font>正如 $g_0$ 和 $g_1$ 的某种组合产生了新的模式。
+当 $\theta > 0$ 时呈墨西哥帽状。它的动力学由方程 $\dot{x}(t) = -(\partial V / \partial x)(x(t), \theta) = \theta x(t) - x(t)^3$ 描述。相变发生时 $\theta = 0$，这时势能函数的底部变平，并且在远离原点的地方迅速变得陡峭。远离原点的相轨迹沿着陡峭的势能函数迅速滑向平坦的底部，然后迅速减速，以极其缓慢的速度向原点移动。结果就是，大量的相点分布在平坦的底部，其它地方则几乎没有相点。如此一来，$\|f(x, \theta)\|$ 在很大的范围内一致地接近于零，从而具有模式切换的能力。而不论 $\theta$ 大于还是小于零，相点都集中在稳定固定点附近，不能满足产生模式切换的条件。所以模式切换的能力确实与相变有关。应用到上面的分析中，我们有 $g_0(x) = -x^3$ 和 $g_1(x) = x$。值得注意的是，$g_1(x)$ 本身只有一个平凡固定点，即 $x = 0$，但当 $\delta \theta > 0$ 时，非平凡的稳定固定点出现在 $x = \pm \sqrt{\delta \theta}$ 处，这是 $g_0$ 和 $g_1$ 连合导致的。这启发我们：<font color="red">模式之间是否存在协作？也就是说，当系统同时处于两个或多个模式（也包括默认模式）时，是否会形成新的模式？</font>正如 $g_0$ 和 $g_1$ 的某种组合产生了新的模式。
 
 ---
 
